--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "PORT=3001 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^9.1.5",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.9.0",
+    "notivue": "^2.4.5",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "vue": "latest",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "vite-svg-loader": "^5.1.0"
   }
 }
