--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.9.0",
     "notivue": "^2.4.5",
     "nuxt": "^3.15.4",
+    "photoswipe": "^5.4.4",
     "pinia": "^2.3.1",
     "vue": "latest",
     "vue-final-modal": "^4.5.5",
