--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@nuxtjs/i18n": "^9.1.5",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.9.0",
+    "apexcharts": "^4.4.0",
     "notivue": "^2.4.5",
     "nuxt": "^3.15.4",
     "photoswipe": "^5.4.4",
     "pinia": "^2.3.1",
     "vue": "latest",
     "vue-final-modal": "^4.5.5",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "vite-svg-loader": "^5.1.0"
